--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
+                    <a href="#top">
                         <img src="assets/images/logo-prana-blk-122x62.png" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#bottom">Контакты</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#footer5-30">Контакты</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:+380681797492">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
@@ -1171,7 +1171,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I7gmkJlWJlEosHDZEGv4fiKGGhSnBfK0ESN4IwSuMefOYYlZKKwGCAHs01RsTzD/X+cmGOG4z7AzLB9hZHfOnZFFLttc137pQuccve+h14p59mGDn2gP3uEOyd1bJr4b">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UGQhKTIEr/6PEkVk+H9b9J4Fz+NWsSozlser8NkVMwfsRBOtYBkZDMgrh37mdGdvaU/wzLX7EGQu5+SD0hFQGAPocZVVvCW7lCUW7STVjNA6j0Lxe5Xy8sBWVrPducfj">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение анкеты!
 Мы свяжемся с вами в течении 24 часов.</div>
