create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
 
     
 
@@ -88,7 +88,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JyASuc+jqeQKTz7eZt1epbQhVu5h5yEp8KPQcR6YY06HWTk3v8yAEI7wetFBu53LLPNyd1e1sZh653ajbn3SRt17w/Z825BoH3eErjaXXEPHO8CN1EuXujWoI8S2SNEJ">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PxCuDI8mXqsR6NfOJ53oR6vGNRXtIsRygENs33woLOBate4x5VTCmN4tavVyuLRbzX64kWXF31ZY2/Om29r+XXwzGDXGiq7EaluxQSREFzoHd8B8FdxS2yv0FigobHRv">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за вашу заявку, мы свяжемся с вами в течении 24 часов!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
