--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
@@ -1171,7 +1171,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kWN3j5It28fxv54HMKyYNB5IuyV/SQzzaljZAntw1GsII81zuMnc1Q5BQl+urjd4U3CW94ll85k2hhNL8t6EkyqalRMabQAV7RQJ0tH6tD3SxNtdnVwqIBL8r67aefW6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0mjbIaJ1PmbRhL7Im9J0om0TEGqqXVp+S2pcRFshkhiMJcCOH0HTyRbvwUbw4IB0ceIHSDF6AgWp8ZuXVUpTD+CsqzI9e8E5ADwmLiQuLtCbwJYStUwqW/4vBRMN9qrk">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение заявки!
 Мы свяжемся с вами в течении 24 часов.</div>
@@ -1265,8 +1265,8 @@
                             <div class="b-info b-phone">
                                 <h5 class="align-left mbr-fonts-style display-5">
                                     Телефон:</h5>
-                                <p class="mbr-text align-left mbr-fonts-style display-7">
-                                    +380(68)1797492 - Киевстар, Украина<br> +48793131864 - Вайбер, WhatsApp &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br><br></p>
+                                <p class="mbr-text align-left mbr-fonts-style display-7"><a href="tel:+380681797492">
+                                    +380(68)1797492 - Киевстар, Украина</a><br><a href="tel:+380681797492"> +48793131864 - Вайбер, WhatsApp &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><br><br></p>
                             </div>
                         </div>
                     </div>
@@ -1279,9 +1279,9 @@
                                 <h5 class="align-left mbr-fonts-style display-5">
                                     E-mail:
                                 </h5>
-                                <p class="mbr-text align-left mbr-fonts-style display-7">
+                                <p class="mbr-text align-left mbr-fonts-style display-7"><a href="mailto:BeHealthyKerala@gmail.com">
                                     BeHealthyKerala@gmail.com
-                                </p>
+                                </a></p>
                             </div>
                         </div>
                     </div>
