--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="cid-rrQaNeE89A" id="image2-36">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="cid-rrQaNeE89A" id="image2-36">
 
     
 
