--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#contacts3-37">Контакты</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#footer5-30">Контакты</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:+380681797492">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
 
     
 
@@ -88,7 +88,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PxCuDI8mXqsR6NfOJ53oR6vGNRXtIsRygENs33woLOBate4x5VTCmN4tavVyuLRbzX64kWXF31ZY2/Om29r+XXwzGDXGiq7EaluxQSREFzoHd8B8FdxS2yv0FigobHRv">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bTNuTk74yXLJIuqTW35IufflCaeXtS0R+zr04loHggdHkuo4XBM4FuHmGQsDaQzU28kPZdufoV0aAyoS4VA/YDZgw3dc1AaEX7PdbD3encoMLhtZSk9Xwl/ntvJtlKA4">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за вашу заявку, мы свяжемся с вами в течении 24 часов!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -107,7 +107,7 @@
                             <div data-for="message" class="col-md-12  form-group">
                                 <textarea name="message" placeholder="Введите ваше сообщение" data-form-field="Message" class="form-control input display-7" id="message-form4-33"></textarea>
                             </div>
-                            <div class="col-md-12 input-group-btn  mt-2 align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="page2.html#image2-36" target="_blank">ОТПРАВИТЬ СООБЩЕНИЕ</button></div>
+                            <div class="col-md-12 input-group-btn  mt-2 align-center"><button type="submit" class="btn btn-primary btn-form display-7" href="page2.html#image2-36" target="_blank">ОТПРАВИТЬ ЗАЯВКУ</button></div>
                         </div>
                     </form><!---Formbuilder Form--->
                 </div>
