--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                         <img src="assets/images/logo-prana-blk-122x62.png" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="#top">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="#top">
                         BeHealthy</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#footer5-30">Контакты</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:+380681797492">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Контакты</a></li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-7" href="tel:+380681797492">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
                     +380(68)1797492&nbsp;</a></div>
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
@@ -1172,7 +1172,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="znZ1oZWt4F8CDodVqu7/lkqTvZLGCMqyHZ6orRO99AS4+OnwmSdXpoNd/x5ANt1JB84NFHDVxpGwK58+Otk7O4T+oqCASON99W7HyjmzXKnPmD2HnD3WDVjPF3Ex8Drk">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FBcCqe3o5h08B2rzXFPSkIrA2T3kja/5rjjiucap+qrJ95vA/VWpTXsFyqcpe15D+/DpRoucDJ2zCs6RJ16ajtffGA1J24RvcSGT+/95ub5GoMfv1ZOAiZxVM+DOHZ4W">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение заявки!
 Мы свяжемся с вами в течении 24 часов.</div>
