--- a/page1.html
+++ b/page1.html
@@ -44,13 +44,13 @@
                         <img src="assets/images/logo-prana-blk-122x62.png" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="#top">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="#top">
                         BeHealthy</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#footer5-30">Контакты</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:+380681797492">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-1v" aria-expanded="false">Для кого</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-22">О туре</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-2d">О докторе</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#testimonials-slider1-2x">Отзывы</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-2n">Стоимость</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#toggle1-2p">FAQ</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Контакты</a></li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-7" href="tel:+380681797492">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
                     +380(68)1797492&nbsp;</a></div>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
 
     
 
@@ -88,7 +88,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bTNuTk74yXLJIuqTW35IufflCaeXtS0R+zr04loHggdHkuo4XBM4FuHmGQsDaQzU28kPZdufoV0aAyoS4VA/YDZgw3dc1AaEX7PdbD3encoMLhtZSk9Xwl/ntvJtlKA4">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fhEae6u0zpCDABK6CU+TA3aFrLilfG7hsij1703rabe+LxjoEKiXKAQ0W7Zle9OZt99N8clOrrGSqC2pG0D92MM3v//SX+Ad0iBQjdYxTTDAflzRhbgV70+o/6BDY/13">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за вашу заявку, мы свяжемся с вами в течении 24 часов!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
