create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section form4 cid-rrQ8Wtkmy3" id="form4-33">
 
     
 
@@ -88,7 +88,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wH/BByfFFNEni3bwyL7/jZBQLz6eOqlLwAqh14hVslEj5gu5mXO4wRaVV4fiR7CzAwmsvDpxF7T6ErmA5+lUhGA4zfwWDeg0F2IpgpjIm+ZhaLYgbpoLZai2Wqtz+GS9">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="keEc5WoKoB72FEghDpXyWh+eTJfqrXcJIwQ3r7wXO/cnV4CTD32bN9UBQOFNFt+jRSUb0ykVa+EzFYEdu0Fk8KYLw7gy2ebtU/gWacGxmQwnMRkSVduQ4w6EcGpddKnS">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за вашу заявку, мы свяжемся с вами в течении 24 часов!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
