create github pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
@@ -497,7 +497,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-success display-4" href="https://mobirise.co">Chcę współpracować</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-success display-4" href="index.html#form1-2j">Chcę współpracować</a></div>
             </div>
         </div>
     </div>
@@ -665,7 +665,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PF8RNRVQjlxxMo+VFZVUNSPMXuZwPxeP9zsoQ1TWGX3vIzcpJc+iqidxL5liy2//iCqYIEeJXPRWMRRElgtNs46AWYAedVBpgjrtYYoZQ938QpAD+4XOiY6FyfZSWmj6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="a0cVo9vztLuhECFj1fTjCRPNdOq91OXQV4Yzoz9giOZnZNIB0RHRi06KArKy1NDeWBUnI8YfsgLmFb/JCdyt0oRfOpBsinVMH9aiWRMaZp30WbZcTfT99CaQq8kDVE4l">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение заявки!
 Мы свяжемся с вами в течении 24 часов.</div>
