create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
@@ -143,7 +143,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/accounting-492x492.png" alt="Mobirise" title="">
+                        <img src="assets/images/accounting-2-492x492.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -169,7 +169,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/accounting-2-492x492.png" alt="Mobirise" title="">
+                        <img src="assets/images/accounting-2-492x4921.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">PŁACE</h4>
@@ -181,7 +181,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/calendar-492x492.png" alt="Mobirise" title="">
+                        <img src="assets/images/calendar-1-492x492.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -205,7 +205,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/wallet-492x492.png" alt="Mobirise" title="">
+                        <img src="assets/images/wallet-1-492x492.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">SPRAWOZDANIA FINANSOWE, GUS</h4>
@@ -217,7 +217,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/stadistics-492x492.png" alt="Mobirise" title="">
+                        <img src="assets/images/stadistics-1-492x492.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">ROZLICZENIE PROJEKTÓW</h4>
@@ -229,7 +229,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/teamwork-492x492.png" alt="Mobirise" title="">
+                        <img src="assets/images/teamwork-1-492x492.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">WSPÓŁPRACA Z GUS, ZUS, US, PUP</h4>
@@ -241,7 +241,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/innovation-492x492.png" alt="Mobirise" title="">
+                        <img src="assets/images/innovation-1-492x492.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">DORADZTWO I WIELLE INNYCH USŁUG</h4>
@@ -638,7 +638,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d3fDaJlVAv19grXfXeddjEulV06pFAiINO+N0hmklANSBKzcokyjNUh/krki96lHTiVsM19LrSrV77a0QJKE1iH4YNgxUwrowYbfcFvr15m5gU+fppqMCCb9XlPtcmKt">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S6T7aylqC632LL6LYyQraGWLj9Z8kah0qKLR+ANWtEJP/dDHYr2iVIpHgwQJ9qihLsgVjfJrFJ3c/inz8fvQ8eWRt1BE6t4p2aHw4p+vcoaeSVPM+iBM+YmdPouGdMOy">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Dziękujemy bardzo!
 Skontaktujemy się z tobą w ciągu 24 godzin.</div>
@@ -647,7 +647,7 @@ Skontaktujemy się z tobą w ciągu 24 godzin.</div>
                     </div>
                     <div class="dragArea row">
                         <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-2j" class="form-control-label mbr-fonts-style display-7">Имя</label>
+                            <label for="name-form1-2j" class="form-control-label mbr-fonts-style display-7">Imię</label>
                             <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" placeholder="Wpisz imię" id="name-form1-2j">
                         </div>
                         <div class="col-md-4  form-group" data-for="email">
@@ -655,11 +655,11 @@ Skontaktujemy się z tobą w ciągu 24 godzin.</div>
                             <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" placeholder="Wpisz e-mail" id="email-form1-2j">
                         </div>
                         <div data-for="phone" class="col-md-4  form-group">
-                            <label for="phone-form1-2j" class="form-control-label mbr-fonts-style display-7">Телефон</label>
+                            <label for="phone-form1-2j" class="form-control-label mbr-fonts-style display-7">Telefon</label>
                             <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" placeholder="Wpisz telefon" id="phone-form1-2j">
                         </div>
                         <div data-for="message" class="col-md-12 form-group">
-                            <label for="message-form1-2j" class="form-control-label mbr-fonts-style display-7">Сообщение</label>
+                            <label for="message-form1-2j" class="form-control-label mbr-fonts-style display-7">Wiadomość</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" placeholder="Wpisz wiadomość" id="message-form1-2j"></textarea>
                         </div>
                         <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-primary display-4">CHCĘ WSPÓLPRACOWAĆ</button></div>
@@ -681,7 +681,7 @@ Skontaktujemy się z tobą w ciągu 24 godzin.</div>
         <div class="row">
             <!--Titles-->
             <div class="title col-12">
-                <h2 class="align-left mbr-fonts-style display-5"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Kontakt:</strong></h2>
+                <h2 class="align-left mbr-fonts-style display-5"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Kontakt:</strong></h2>
                 
             </div>
             <div class="col-12">
