--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header2-7">Strona Głowna</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header1-3b">O biurze</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-25">Dlaczego my?</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#testimonials1-3w">Usługi</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Kontakt</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header2-7">Strona Głowna</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header1-3b">O biurze</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-3i">Dlaczego my?</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#testimonials1-3w">Usługi</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Kontakt</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-7" href="tel:+48177421438">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>+48(17)7421438&nbsp;</a></div>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
@@ -169,7 +169,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/accounting-2-492x4921.png" alt="Mobirise" title="">
+                        <img src="assets/images/accounting-2-492x4922.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">PŁACE</h4>
@@ -638,7 +638,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S6T7aylqC632LL6LYyQraGWLj9Z8kah0qKLR+ANWtEJP/dDHYr2iVIpHgwQJ9qihLsgVjfJrFJ3c/inz8fvQ8eWRt1BE6t4p2aHw4p+vcoaeSVPM+iBM+YmdPouGdMOy">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VB9JyUCVzvw0OdyfpCpx444E2EpdT+eqsuPRT1QSKkGpW4lkaqCRMGScgrXya0+Lz44yE66EzcN0YyMM/gDOpacCFxm6AGcLXBXrFM9+mnFubD9WH3l2bV0NlIGsdRbw">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Dziękujemy bardzo!
 Skontaktujemy się z tobą w ciągu 24 godzin.</div>
