--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header1-3b">O biurze</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-25">Dlaczego my?</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#testimonials1-3w">Usługi</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Kontakt</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#header1-3b">O biurze</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-3i">Dlaczego my?</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#content9-3y">Usługi</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="index.html#contacts3-37">Kontakt</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-7" href="tel:+48177421438"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
                     +48(17)7421438&nbsp;</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
