create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="cid-rrtSr8dKat mbr-fullscreen" id="header2-7">
 
     
 
@@ -607,8 +607,8 @@
                             </span>
                             <div class="b-info b-phone">
                                 <h5 class="align-left mbr-fonts-style display-2">Telefon:</h5>
-                                <p class="mbr-text align-left mbr-fonts-style display-7"><strong><a href="tel:+48177421438" class="text-black">+48(17)7421438  - Stacjonarny
-</a><br><a href="tel:+48660435552" class="text-black">+48660435552&nbsp;- Komórkowy</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong><br></p>
+                                <p class="mbr-text align-left mbr-fonts-style display-7"><a href="tel:+48177421438" class="text-black"><strong>+48</strong>(<strong>17)7421438  - Stacjonarny
+</strong></a><br><a href="tel:+48660435552" class="text-black" style="font-weight: bold;">+<strong>48660435552&nbsp;</strong>- Komórkowy</a><strong> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong><br></p>
                             </div>
                         </div>
                     </div>
@@ -621,7 +621,7 @@
                                 <h5 class="align-left mbr-fonts-style display-2">
                                     E-mail:
                                 </h5>
-                                <p class="mbr-text align-left mbr-fonts-style display-7"><strong><a href="mailto:biuro@prestigeoffice.pl" class="text-black">biuro@prestigeoffice.pl</a><br><a href="mailto:kadry@prestigeoffice.pl" class="text-black">kadry@prestigeoffice.pl</a><br><a href="mailto:ksiegowosc@prestigeoffice.pl" class="text-black">ksiegowosc@prestigeoffice.pl</a><br></strong></p>
+                                <p class="mbr-text align-left mbr-fonts-style display-7"><a href="mailto:biuro@prestigeoffice.pl" class="text-black" style="font-weight: bold;">biuro@prestigeoffice.pl</a><br><a href="mailto:kadry@prestigeoffice.pl" class="text-black" style="font-weight: bold;"><strong>kadry@prestigeoffice</strong>.pl</a><br><a href="mailto:ksiegowosc@prestigeoffice.pl" class="text-black"><strong>ksiegowosc@prestigeoffice</strong>.<strong>pl</strong></a><br></p>
                             </div>
                         </div>
                     </div>
