--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rrtSr8dKat mbr-fullscreen mbr-parallax-background" id="header2-7">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rrtSr8dKat mbr-fullscreen mbr-parallax-background" id="header2-7">
 
     
 
@@ -577,9 +577,9 @@
                             </span>
                             <div class="b-info b-adress">
                                 <h5 class="align-left mbr-fonts-style display-2">
-                                    Address:
+                                    Adres:
                                 </h5>
-                                <p class="mbr-text align-left mbr-fonts-style display-7"><strong>ul. Króla Augusta 44a, 35-500, Rzeszów</strong></p>
+                                <p class="mbr-text align-left mbr-fonts-style display-7"><strong>ul. Króla Augusta 44a, 35-210, Rzeszów</strong></p>
                             </div>
                         </div>
                     </div>
@@ -639,7 +639,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
